Fix most of the Java, Findbugs and unused code warnings in this package
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1050660 13f79535-47bb-0310-9956-ffa450edef68